[package]
name = "rubicon-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["macros", "sync"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version="1.0.72" }
rubicon-rs = { git="https://github.com/rmcwhorter/rubicon-rs" }
tokio-tungstenite = "0.16.1"
futures-channel = "0.3.18"
futures-util = "0.3.17"
anyhow = "1.0.45"
