[package]
name = "rubicon-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# websockets server
#jwd = { git="https://github.com/rmcwhorter/jswsds-rs" }
jwd = { path="/home/ryan/Documents/_Rubicon/jswsds-rs" }

# async
tokio = { version = "1.14.0", features = ["full"] }

# random numbers
rand = "0.8.4"

# logging
tracing-subscriber = { version="0.3.3", features=["env-filter"] }
opentelemetry = { version = "*", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }
tracing-opentelemetry = "*"

# Serialization
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version="1.0.72" }